# MaaMCP_CC

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: publish.yml  test.yml
