[project]
name = "maa-dev-mcp"
version = "0.1.0"
description = "MaaFramework Pipeline 開發工具 MCP Server，專為 Claude Code 設計"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "MaaFw>=5.0.0",
    "opencv-python>=4.0.0",
]

[project.scripts]
maa-dev-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/Arcelibs/MaaDevMCP"
Issues = "https://github.com/Arcelibs/MaaDevMCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 讓 hatchling 打包根目錄的 server.py
include = ["server.py"]
